day / night cycle

--- a/core/assets/locale/strings.properties
+++ b/core/assets/locale/strings.properties
@@ -1,3 +1,9 @@
 pillar=Dedicated to the veterans of The Spanish Civil War.
 locked=Locked.
-welcomeToBolero=Welcome to the town of Bolero.
+monday=Monday
+tuesday=Tuesday
+wednesday=Wednesday
+thursday=Thursday
+friday=Friday
+saturday=Saturday
+sunday=Sunday
