loading dialog from assets

--- a/core/assets/locale/strings.properties
+++ b/core/assets/locale/strings.properties
@@ -7,3 +7,9 @@ thursday=Thursday
 friday=Friday
 saturday=Saturday
 sunday=Sunday
+dialog1=I have a special contract that needs fulfillment. In truth. I don't wish to offer it to any other family member. I've come to rely on your abilities. We're usually called upon to take a life, but not this time. This contract requires us to stage the assassination of a marked man.
+dialog2=As you wish. Just remember, had I issued a direct order, you would not have been able to refuse. So say the Tenets. Consider what I have said.
+dialog3=You must go to the city of Chorrol and break into the house of Francois Motierre. Inside you will find Motierre waiting for you. Do not kill him! You see, Francois Motierre is a marked man. He owes a considerable sum to the wrong kind of people. So, they have sent an enforcer to kill him. This is an unusual contract, Motierre had to make a special arrangement with us before it was approved. I trust in your professionalism.
+choice1=I accept.
+choice2=I decline.
+choice3=Farewell.
