--- a/core/assets/locale/strings.properties
+++ b/core/assets/locale/strings.properties
@@ -13,3 +13,4 @@ dialog3=You must go to the city of Chorrol and break into the house of Francois 
 choice1=I accept.
 choice2=I decline.
 choice3=Farewell.
+dialog4=Dawn is breaking.
